# cpw

./: .gitignore  configure.ac  testoutput.raw
etc/: cpw.conf
src/: Makefile.am  arg.c  arg.h  command.c  command.h  commandarg.c  commandarg.h  config.c  config.h  context.c  context.h  cpw.c  cpwconfig.c  cpwconfig.h  debug.h  helper.c  helper.h  log.c  log.h  pipe.c  pipe.h  process.c  process.h
tests/: Makefile.am  check_command.c  check_config.c  check_context.c  check_helper.c  check_next_token.conf  check_process.c  check_seek_to_tag.conf  invalid_config.conf  invalid_logic_config.conf  invalid_syntax_config.conf  process.conf  valid_config.conf  valid_logic_config.conf
